--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@
 
 
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark;
+  themes: light --default;
+ }
 
 
 .font-urbanist {
