--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,15 @@
 
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: light --default, dark --prefersdark;
-  themes: light --default;
- }
+  themes: light --default, dark;
+}
+
+/* @plugin "daisyui/theme" {
+  name: "dark";
+  default: true;
+  --color-primary: blue;
+  --color-secondary: teal;
+} */
 
 
 .font-urbanist {
